--- a/server/.env.example
+++ b/server/.env.example
@@ -2,7 +2,7 @@ APP_KEY=
 APP_URL=http://localhost
 APP_PORT=5000
 
-DB_HOST=host
-DB_USER=user
+DB_HOST=localhost
+DB_USER=postgres
 DB_PASSWORD=password
-DB_DATABASE='db_name
+DB_DATABASE='db_name'
