--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.2",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
